# FlightBox

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
flightbox/: __init__.py  audit.py  cli.py  diff.py  export.py  recorder.py  replayer.py  report.py  store.py  timeline.py
tests/: test_audit_cloud_keys.py  test_audit_policy.py  test_cli.py  test_diff.py  test_export.py  test_litellm.py  test_report.py  test_store.py  test_timeline.py
