[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flightbox"
version = "0.1.0"
description = "Black-box flight recorder for AI agents — record, replay, and diff LLM sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Yufeng He"}]
keywords = ["llm", "agent", "debugging", "replay", "testing", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
flightbox = "flightbox.cli:cli"

[project.urls]
Homepage = "https://github.com/he-yufeng/FlightBox"
Issues = "https://github.com/he-yufeng/FlightBox/issues"

[tool.ruff]
line-length = 100
target-version = "py39"
